src/app/uprising/map-builder/map-builder.component.scss
.btn-sm {
  height: 31px;
}

.map-tile {
  width: 25%;
  min-height: 6.5em;
  margin: 1rem 0 0 1rem;
  color: white;
  border-radius: 0.75em;
  padding: 4%;
  z-index: 1;
}

.z1 {
  z-index: 1;
}

.z2 {
  z-index: 2;
}

.pointer {
  cursor: pointer;
}

.draw-zone {
  position: relative;
  background-color: white;
  border-radius: 10px; 
  border-style: solid; 
  border-width: 2px;
}
.map-small {
  height: 400px;
  width: 700px;
}
.map-medium {
  height: 600px;
  width: 950px
}
.map-large {
  height: 800px;
  width: 1200px
}
.map-huge {
  height: 1000px;
  width: 1450px;
}


.dropzone {
  background-color: #bfe4ff;
  border: dashed 4px transparent;
  border-radius: 4px;
  margin: 10px auto 30px;
  padding: 10px;
  width: 80%;
  // width: 100px;
  transition: background-color 0.3s;
}

// Style of drop zone when an elemnt is being dragged and is able to be placed in the drop zone
.drop-active {
  border-color: #aaa;
}

// Style of drop zone when element is dragged and able to be dropped
.drop-target {
  // background-color: #29e;
  background-color: #29e;
  border-color: #af1a1a;
  border-style: solid;
}

// Draggable elements
.drag-drop {
  touch-action: none;
  transform: translate(0px, 0px);
  transition: background-color 0.3s;
}

// Style of elements that are dragged into the drop zone
.drag-drop.can-drop {
  // background-color: #4e4;
}

.selected {
  border: 2px solid #0b6e75;;
}

